performed a coarse cleanup of the formatting of all workshop pages

--- a/workshop/ohbm2018.md
+++ b/workshop/ohbm2018.md
@@ -2,31 +2,24 @@
 layout: default
 ---
 
-# Singapore
+# FieldTrip workshop in Singapore
 
-
-*  By whom: Maria Carla Piastra1 , Sophie Schrader1 and Simon Homölle2 
-
+*  By whom: Maria Carla Piastra, Sophie Schrader and Simon Homölle
 *  When: 17 June 2018
+*  Where: Educational courses at the [OHBM2018](https://www.humanbrainmapping.org/files/2018/ED/EEG%20and%20MEG(1).pdf)  conference in Singapore
 
-*  Where: Educational courses at the [OHBM2018](https://www.humanbrainmapping.org/files/2018/ED/EEG%20and%20MEG(1).pdf)  conference in Singapore 
-
-1 Institute for Biomagnetism and Biosignalanalysis, University of Münster, Münster, Germany.
-
-2 Donders Institute for Brain, Cognition and Behaviour, Radboud University, Nijmegen, The Netherlands.
 ## What is the workshop about?
 
-The course is aimed at researchers who want to learn how to do MEG and/or EEG source reconstruction. We expect that you know the basics of MATLAB and that you already have experience with MEG/EEG preprocessing and analysis. 
+The course is aimed at researchers who want to learn how to do MEG and/or EEG source reconstruction. We expect that you know the basics of MATLAB and that you already have experience with MEG/EEG preprocessing and analysis.
 
-In this intense one-day workshop we will explain state-of-the-art MEG and EEG source reconstruction methods. Special emphasis will be given to new features available now in Fieldtrip to solve the EEG and MEG forward solution with advanced finite element methods. These techniques are the results with the collaboration with WWU Muenster University where the [SimBio](https://www.mrt.uni-jena.de/simbio/index.php/Main_Page#Welcome) and [duneuro](http://duneuro.org/) forward problem solutions have been embedded in Fieldtrip pipelines. 
+In this intense one-day workshop we will explain state-of-the-art MEG and EEG source reconstruction methods. Special emphasis will be given to new features available now in Fieldtrip to solve the EEG and MEG forward solution with advanced finite element methods. These techniques are the results with the collaboration with WWU Muenster University where the [SimBio](https://www.mrt.uni-jena.de/simbio/index.php/Main_Page#Welcome) and [duneuro](http://duneuro.org/) forward problem solutions have been embedded in Fieldtrip pipelines.
 
-The workshop will consist of a number of lectures, followed by hands-on sessions in which you will be tutored through the complete analysis of a MEG, EEG and MRI data set using the FieldTrip toolbox. The focus is in source reconstruction, particularly in advanced techniques available to solve the EEG and MEG forward problem. As the focus is on source reconstruction, topics that will NOT be covered in great detail are segmenting, artifact handling, averaging, frequency and time-frequency analysis, statistics.  For the hands-on sessions you should bring a laptop with MATLAB installed. 
+The workshop will consist of a number of lectures, followed by hands-on sessions in which you will be tutored through the complete analysis of a MEG, EEG and MRI data set using the FieldTrip toolbox. The focus is in source reconstruction, particularly in advanced techniques available to solve the EEG and MEG forward problem. As the focus is on source reconstruction, topics that will NOT be covered in great detail are segmenting, artifact handling, averaging, frequency and time-frequency analysis, statistics.  For the hands-on sessions you should bring a laptop with MATLAB installed.
 
 More information about the program can be found below.
 
 `<note important>`
-The SimBio software is described in detail [here](https://www.mrt.uni-jena.de/simbio/index.php/Main_Page#Welcome). The integration with FieldTrip is described in the reference below. Please cite this reference if you use the FieldTrip-SimBio pipeline in your research.\\
-\\
+The SimBio software is described in detail [here](https://www.mrt.uni-jena.de/simbio/index.php/Main_Page#Welcome). The integration with FieldTrip is described in the reference below. Please cite this reference if you use the FieldTrip-SimBio pipeline in your research.
 
 Vorwerk, J., Oostenveld, R., Piastra, M.C., Magyari, L., & Wolters, C. H. **The FieldTrip‐SimBio pipeline for EEG forward solutions.** BioMed Eng OnLine (2018) 17:37. [DOI: 10.1186/s12938-018-0463-y](https://doi.org/10.1186/s12938-018-0463-y).
 
@@ -36,12 +29,12 @@ Vorwerk, J., Oostenveld, R., Piastra, M.C., Magyari, L., & Wolters, C. H. **The 
 ## How should you prepare for the workshop?
 
 `<note important>`
-In this workshop we will have a steep learning curve. We will move from basic preprocessing to source-level analysis. Given the limited amount of time, it is **important** that you come well prepared. 
+In this workshop we will have a steep learning curve. We will move from basic preprocessing to source-level analysis. Given the limited amount of time, it is **important** that you come well prepared.
 `</note>`
 
 If you are not familiar with MATLAB or are not certain about your MATLAB skills, please go through the "MATLAB for psychologists" tutorial on http://www.antoniahamilton.com/matlab.html
 
-Please read the [FieldTrip reference paper](http://www.hindawi.com/journals/cin/2011/156869/) to understand the toolbox design. 
+Please read the [FieldTrip reference paper](http://www.hindawi.com/journals/cin/2011/156869/) to understand the toolbox design.
 
 In the first workshop hands-on session we will start with preprocessing EEG data, but will not spend too much time on understanding how MATLAB works and how FieldTrip organizes the data. Therefore if you have never done any FieldTrip analysis in MATLAB before, you should read this [introduction tutorial](/tutorial/introduction).
 *We will start at 9:00 sharp and will finish around 17:30.*
@@ -52,23 +45,22 @@ The experiment that the subject performed is a slight adaptation of the classica
 
 ##  Schedule for Sunday
 
- | 08:00-08:30 | Welcome and getting started                                    | 
- | ----------- | ---------------------------                                    | 
- | 08:30-9:20  | Lecture - Preprocessing                                        | 
- | 9:20-10:40  | Hands on - [Preprocessing](/workshop/ohbm2018/preprocessing)    | 
- | 10:40-11:00 | Break                                                          | 
- | 11:00-12:00 | Lecture - Forward problem                                      | 
- | 12:00-13:00 | Lunch break                                                    | 
- | 13:00-14:00 | Hands on - [ Forward problem](/workshop/ohbm2018/forward )      | 
- | 14:00-14:45 | Lecture - Inverse problem                                      | 
- | 14:45-15:00 | Break                                                          | 
- | 15:00-16:00 | Hands on -[ Inverse problem](/workshop/ohbm2018/inverse )       | 
- | 16:00-16:30 | Wrap-up-the-day: special topics, general questions and answers | 
+ | 08:00-08:30 | Welcome and getting started                                    |
+ | ----------- | ---------------------------                                    |
+ | 08:30-9:20  | Lecture - Preprocessing                                        |
+ | 9:20-10:40  | Hands on - [Preprocessing](/workshop/ohbm2018/preprocessing)   |
+ | 10:40-11:00 | Break                                                          |
+ | 11:00-12:00 | Lecture - Forward problem                                      |
+ | 12:00-13:00 | Lunch break                                                    |
+ | 13:00-14:00 | Hands on - [Forward problem](/workshop/ohbm2018/forward )      |
+ | 14:00-14:45 | Lecture - Inverse problem                                      |
+ | 14:45-15:00 | Break                                                          |
+ | 15:00-16:00 | Hands on -[Inverse problem](/workshop/ohbm2018/inverse )       |
+ | 16:00-16:30 | Wrap-up-the-day: special topics, general questions and answers |
 
 `<note important>`
 Currently, the pipeline for computing the MEG forward problem solution has been tested on Ubuntu systems, where Matlab should be started with the following comman
 
-	
 	BLAS_VERSION=/usr/lib/libblas.so LD_PRELOAD=/usr/lib/x86_64-linux-gnu/libstdc++.so.6 ./matlab
 
 
@@ -76,24 +68,22 @@ Currently, the pipeline for computing the MEG forward problem solution has been 
 
 Once Matlab is open, you need to issue the following command
 
-
 	clc;
-	clear; 
+	clear;
 	close all;
-	
+
 	restoredefaultpath    % restore default folder for matlab
 	path2ft_ohbm2018 = ''; % write your path
 	cd(path2ft_ohbm2018)
-	
-	maindir = pwd;        % keep main path 
-	
+
+	maindir = pwd;        % keep main path
+
 	cd fieldtrip % set up the path of fieldtrip
 	addpath([path2ft_ohbm2018,'/external_duneuro'])
 	addpath(pwd)
 	ft_defaults
-	
-	cd(maindir)           % return to main 
 
+	cd(maindir)           % return to main
 
 `<note warning>`
 Please do NOT use the graphical path management tool from MATLAB. In this hands-on session we'll manage the path from the command line, but in general you are much better off using the startup.m file than the path GUI.
@@ -107,7 +97,6 @@ present working directory, i.e. the directory containing the fieldtrip
 main functions. The ft_defaults command ensures that all required
 subdirectories are added to the path.
 
-If you get the error "can't find the command ft_defaults" you should check the present working directory. 
+If you get the error "can't find the command ft_defaults" you should check the present working directory.
 
 After installing FieldTrip to your path, you need to change into the hands-on specific directory, containing the data that is necessary to run the specific hands-on session. These folders are located in C:\FieldTrip_workshop\OHBM2018\data.
-\\
