--- a/development/meeting/20140702.md
+++ b/development/meeting/20140702.md
@@ -8,8 +8,7 @@ tags: [meeting]
 
 #### Agenda
 
-   - discuss HG2, i.e. [bug 2461](http://bugzilla.fieldtriptoolbox.org/show_bug.cgi?id=2461) (Jörn) 
-   - minor comment  [bug 2543](http://bugzilla/show_bug.cgi?id=2543) and [bug 2625](http://bugzilla/show_bug.cgi?id=2625) (Diego)
+   - discuss HG2, i.e. [bug 2461](http://bugzilla.fieldtriptoolbox.org/show_bug.cgi?id=2461) (Jörn)
+   - minor comment  [bug 2543](http://bugzilla.fieldtriptoolbox.org/show_bug.cgi?id=2543) and [bug 2625](http://bugzilla.fieldtriptoolbox.org/show_bug.cgi?id=2625) (Diego)
    - external mex-files (see [rev 9683](https://code.google.com/p/fieldtrip/source/diff?spec=svn9683&r=9683&format=side&path=/trunk/preproc/ft_preproc_medianfilter.m) and [bug 2174](http://bugzilla.fieldtriptoolbox.org/show_bug.cgi?id=2174)) (Eelke)
    - firws filtering; reporting in preproc loop (see [bug 2453](http://bugzilla.fieldtriptoolbox.org/show_bug.cgi?id=2453)) (Eelke)
-
