--- a/README
+++ b/README
@@ -9,5 +9,5 @@ This repository contains the content that is hosted on http://www.fieldtriptoolb
 - Shared pages should go in _include/shared.
 
 ## Ideas
-- for image resizing we might consider a service like https://www.imgix.com
+- for image resizing we might consider a service like https://www.imgix.com or https://images.weserv.nl
 - use code highlighting from https://jekyllrb.com/docs/liquid/tags/#code-snippet-highlighting
