--- a/CHANGES
+++ b/CHANGES
@@ -17,3 +17,7 @@
   - Do not show tags section when empty
   - Add title to each of the pages
   - Moved bash scripts to _scripts directory
+
+2018-10-29
+  - Numerous other changes over the last few days
+  - Updated all content to the latest (frozen) version of 2018-10-31
