numerous formatting cleanups

--- a/workshop/baci2017.md
+++ b/workshop/baci2017.md
@@ -5,10 +5,10 @@ layout: default
 
 # FieldTrip workshop in Bern, Switzerland
 
-*  By whom: Maria Carla Piastra, Marios Antonakakis, Simon Homölle
-*  When: 29 August 2017
-*  Where: Pre-conference training courses at the BACI2017 conference in Bern [http://www.baci-conference.com](http://www.baci-conference.com)
-*  Local organization: Thomas König.
+-   By whom: Maria Carla Piastra, Marios Antonakakis, Simon Homölle
+-   When: 29 August 2017
+-   Where: Pre-conference training courses at the BACI2017 conference in Bern <http://www.baci-conference.com>
+-   Local organization: Thomas König.
 
 ## How should you prepare for the workshop?
 
@@ -16,27 +16,27 @@ layout: default
 In this workshop we will have a steep learning curve. We will move from basic preprocessing to source-level analysis. Given the limited amount of time, it is **important** that you come well prepared.
 {% include markup/end %}
 
-If you are not familiar with MATLAB or are not certain about your MATLAB skills, please go through the "MATLAB for psychologists" tutorial on http://www.antoniahamilton.com/matlab.html
+If you are not familiar with MATLAB or are not certain about your MATLAB skills, please go through the "MATLAB for psychologists" tutorial on <http://www.antoniahamilton.com/matlab.html>
 
 Please read the [FieldTrip reference paper](http://www.hindawi.com/journals/cin/2011/156869/) to understand the toolbox design.
 
 In the first workshop hands-on session we will start with preprocessing EEG data, but will not spend too much time on understanding how MATLAB works and how FieldTrip organizes the data. Therefore if you have never done any FieldTrip analysis in MATLAB before, you should read this [introduction tutorial](/tutorial/introduction).
-*We will start at 9:00 sharp and will finish around 17:30.*
+_We will start at 9:00 sharp and will finish around 17:30._
 
-####  Tuesday
+#### Tuesday
 
- | 09:00-09:30 | Welcome                                                                                                                              |
- | ----------- | -------                                                                                                                              |
- | 09:30-10:30 | Lecture [ Preprocessing](http:/ftp.fieldtriptoolbox.org/pub/fieldtrip/workshop/baci2017/antonakakis_preprocessing_29_08_2017.pptx )  |
- | 10:30-10:45 | Coffee break                                                                                                                         |
- | 10:45-11:30 | Hands on - [Preprocessing](/workshop/baci2017/preprocessing )                                                                        |
- | 11:30-12:30 | Lecture - Forward problem                                                                                                            |
- | 12:30-14:00 | Lunch break                                                                                                                          |
- | 14:00-15:00 | Hands on - [Forward problem](/workshop/baci2017/forwardproblem )                                                                     |
- | 15:00-15:45 | Lecture - Inverse problem                                                                                                            |
- | 15:45-16:00 | Coffee break                                                                                                                         |
- | 16:00-17:00 | Hands on - [Inverse problem](/workshop/baci2017/inverseproblem )                                                                     |
- | 17:00-17:30 | Wrap-up-the-day: special topics, general questions and answers                                                                       |
+| 09:00-09:30 | Welcome                                                                                                                            |
+| ----------- | ---------------------------------------------------------------------------------------------------------------------------------- |
+| 09:30-10:30 | Lecture [ Preprocessing](http:/ftp.fieldtriptoolbox.org/pub/fieldtrip/workshop/baci2017/antonakakis_preprocessing_29_08_2017.pptx) |
+| 10:30-10:45 | Coffee break                                                                                                                       |
+| 10:45-11:30 | Hands on - [Preprocessing](/workshop/baci2017/preprocessing)                                                                       |
+| 11:30-12:30 | Lecture - Forward problem                                                                                                          |
+| 12:30-14:00 | Lunch break                                                                                                                        |
+| 14:00-15:00 | Hands on - [Forward problem](/workshop/baci2017/forwardproblem)                                                                    |
+| 15:00-15:45 | Lecture - Inverse problem                                                                                                          |
+| 15:45-16:00 | Coffee break                                                                                                                       |
+| 16:00-17:00 | Hands on - [Inverse problem](/workshop/baci2017/inverseproblem)                                                                    |
+| 17:00-17:30 | Wrap-up-the-day: special topics, general questions and answers                                                                     |
 
 To get going, you need to start MATLAB. Then, you need to issue the following command
 
@@ -59,4 +59,4 @@ subdirectories are added to the path.
 
 If you get the error "can't find the command ft_defaults" you should check the present working directory.
 
-After installing FieldTrip to your path, you need to change into the hands-on specific directory, containing the data that is necessary to run the specific hands-on session. These folders are located in C:\FieldTrip_workshop\baci2017\data.
+After installing FieldTrip to your path, you need to change into the hands-on specific directory, containing the data that is necessary to run the specific hands-on session. These folders are located in C:\\FieldTrip_workshop\\baci2017\\data.
