--- a/workshop/ohbm2018.md
+++ b/workshop/ohbm2018.md
@@ -5,9 +5,9 @@ layout: default
 
 # FieldTrip workshop in Singapore
 
-*  By whom: Maria Carla Piastra, Sophie Schrader and Simon Homölle
-*  When: 17 June 2018
-*  Where: Educational courses at the [OHBM2018](https://www.humanbrainmapping.org/files/2018/ED/EEG%20and%20MEG(1).pdf)  conference in Singapore
+-   By whom: Maria Carla Piastra, Sophie Schrader and Simon Homölle
+-   When: 17 June 2018
+-   Where: Educational courses at the [OHBM2018](https://www.humanbrainmapping.org/files/2018/ED/EEG%20and%20MEG(1).pdf)  conference in Singapore
 
 ## What is the workshop about?
 
@@ -31,31 +31,31 @@ Vorwerk, J., Oostenveld, R., Piastra, M.C., Magyari, L., & Wolters, C. H. **The 
 In this workshop we will have a steep learning curve. We will move from basic preprocessing to source-level analysis. Given the limited amount of time, it is **important** that you come well prepared.
 {% include markup/end %}
 
-If you are not familiar with MATLAB or are not certain about your MATLAB skills, please go through the "MATLAB for psychologists" tutorial on http://www.antoniahamilton.com/matlab.html
+If you are not familiar with MATLAB or are not certain about your MATLAB skills, please go through the "MATLAB for psychologists" tutorial on <http://www.antoniahamilton.com/matlab.html>
 
 Please read the [FieldTrip reference paper](http://www.hindawi.com/journals/cin/2011/156869/) to understand the toolbox design.
 
 In the first workshop hands-on session we will start with preprocessing EEG data, but will not spend too much time on understanding how MATLAB works and how FieldTrip organizes the data. Therefore if you have never done any FieldTrip analysis in MATLAB before, you should read this [introduction tutorial](/tutorial/introduction).
-*We will start at 9:00 sharp and will finish around 17:30.*
+_We will start at 9:00 sharp and will finish around 17:30._
 
 ## What is the experiment about?
 
 The experiment that the subject performed is a slight adaptation of the classical oddball experiment. The details about the experiment can be found [here](/tutorial/natmeg/dataset).
 
-##  Schedule for Sunday
+## Schedule for Sunday
 
- | 08:00-08:30 | Welcome and getting started                                    |
- | ----------- | ---------------------------                                    |
- | 08:30-9:20  | Lecture - Preprocessing                                        |
- | 9:20-10:40  | Hands on - [Preprocessing](/workshop/ohbm2018/preprocessing)   |
- | 10:40-11:00 | Break                                                          |
- | 11:00-12:00 | Lecture - Forward problem                                      |
- | 12:00-13:00 | Lunch break                                                    |
- | 13:00-14:00 | Hands on - [Forward problem](/workshop/ohbm2018/forward )      |
- | 14:00-14:45 | Lecture - Inverse problem                                      |
- | 14:45-15:00 | Break                                                          |
- | 15:00-16:00 | Hands on -[Inverse problem](/workshop/ohbm2018/inverse )       |
- | 16:00-16:30 | Wrap-up-the-day: special topics, general questions and answers |
+| 08:00-08:30 | Welcome and getting started                                    |
+| ----------- | -------------------------------------------------------------- |
+| 08:30-9:20  | Lecture - Preprocessing                                        |
+| 9:20-10:40  | Hands on - [Preprocessing](/workshop/ohbm2018/preprocessing)   |
+| 10:40-11:00 | Break                                                          |
+| 11:00-12:00 | Lecture - Forward problem                                      |
+| 12:00-13:00 | Lunch break                                                    |
+| 13:00-14:00 | Hands on - [Forward problem](/workshop/ohbm2018/forward)       |
+| 14:00-14:45 | Lecture - Inverse problem                                      |
+| 14:45-15:00 | Break                                                          |
+| 15:00-16:00 | Hands on -[Inverse problem](/workshop/ohbm2018/inverse)        |
+| 16:00-16:30 | Wrap-up-the-day: special topics, general questions and answers |
 
 {% include markup/warning %}
 Currently, the pipeline for computing the MEG forward problem solution has been tested on Ubuntu systems, where Matlab should be started with the following command:
@@ -65,22 +65,22 @@ Currently, the pipeline for computing the MEG forward problem solution has been 
 
 Once Matlab is open, you need to issue the following command
 
-	clc;
-	clear;
-	close all;
+    clc;
+    clear;
+    close all;
 
-	restoredefaultpath    % restore default folder for matlab
-	path2ft_ohbm2018 = ''; % write your path
-	cd(path2ft_ohbm2018)
+    restoredefaultpath    % restore default folder for matlab
+    path2ft_ohbm2018 = ''; % write your path
+    cd(path2ft_ohbm2018)
 
-	maindir = pwd;        % keep main path
+    maindir = pwd;        % keep main path
 
-	cd fieldtrip % set up the path of fieldtrip
-	addpath([path2ft_ohbm2018,'/external_duneuro'])
-	addpath(pwd)
-	ft_defaults
+    cd fieldtrip % set up the path of fieldtrip
+    addpath([path2ft_ohbm2018,'/external_duneuro'])
+    addpath(pwd)
+    ft_defaults
 
-	cd(maindir)           % return to main
+    cd(maindir)           % return to main
 
 {% include markup/danger %}
 Please do NOT use the graphical path management tool from MATLAB. In this hands-on session we'll manage the path from the command line, but in general you are much better off using the startup.m file than the path GUI.
@@ -92,4 +92,4 @@ The restoredefaultpath command clears your path, keeping only the official MATLA
 
 If you get the error "can't find the command ft_defaults" you should check the present working directory.
 
-After installing FieldTrip to your path, you need to change into the hands-on specific directory, containing the data that is necessary to run the specific hands-on session. These folders are located in C:\FieldTrip_workshop\OHBM2018\data.
+After installing FieldTrip to your path, you need to change into the hands-on specific directory, containing the data that is necessary to run the specific hands-on session. These folders are located in C:\\FieldTrip_workshop\\OHBM2018\\data.
