--- a/development/meeting/20120912.md
+++ b/development/meeting/20120912.md
@@ -6,26 +6,15 @@ tags: [meeting]
 
 # FieldTrip meeting - 20120912
 
-*  Stephen invited everyone for barbeque on Sunday evening
-
-*  tasks for today: discussing bugs and assigning new ones
-
-*  bug1676 (ft_defaults not adding realtime folder properly to path)
-
-*  bug1371 ft_plot_topoTFR is taking care of nan's and gives a warning if nan's are present
-
-*  bug1693 has been discussed  
-
-*  EDA meeting tomorrow: topic is tapering and wavelets
-
-*  dashboard is not showing updated info for some bugs
-
-*  new bugs assigned: bug1704, bug1703, bug1697, bug1688, bug1684, bug1682, bug1678, bug1959, bug1637 
-
-*  new bug was filed: bug1707 (checking if channel order matters)
-
-*  bug1664 has been discussed (not assigned yet!)
-
-*  today the emails aren't sent from bugzilla when changes are made
-
-*  to do: select more bugs and set a date for next bugbinge
+-   Stephen invited everyone for barbeque on Sunday evening
+-   tasks for today: discussing bugs and assigning new ones
+-   bug1676 (ft_defaults not adding realtime folder properly to path)
+-   bug1371 ft_plot_topoTFR is taking care of nan's and gives a warning if nan's are present
+-   bug1693 has been discussed  
+-   EDA meeting tomorrow: topic is tapering and wavelets
+-   dashboard is not showing updated info for some bugs
+-   new bugs assigned: bug1704, bug1703, bug1697, bug1688, bug1684, bug1682, bug1678, bug1959, bug1637
+-   new bug was filed: bug1707 (checking if channel order matters)
+-   bug1664 has been discussed (not assigned yet!)
+-   today the emails aren't sent from bugzilla when changes are made
+-   to do: select more bugs and set a date for next bugbinge
