--- a/README
+++ b/README
@@ -10,6 +10,12 @@ This repository contains the content that is hosted on http://www.fieldtriptoolb
 - MarkDown documentation can be found on https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet.
 - Liquid documentation can be found on https://help.shopify.com/en/themes/liquid.
 
+## Checking for broken links and missing images
+
+  wget --spider -r -nd -nv -o spider.log http://localhost:4000
+  grep -B1 'broken link!' spider.log  | grep http > broken.log
+
+
 ## Ideas
 - For image resizing we might consider a service like https://www.imgix.com or https://images.weserv.nl.
 - Use code highlighting from https://jekyllrb.com/docs/liquid/tags/#code-snippet-highlighting.
