use default layout

--- a/404.md
+++ b/404.md
@@ -1,4 +1,10 @@
 ---
 title:
-layout: 404
+layout: default
 ---
+
+# 404
+
+**The requested page could not be found :(**
+
+{% include searchwebsite %}
