some common cleanups to formatting, mostly small errors due to conversion from dokuwiki

--- a/development/meeting/20140625.md
+++ b/development/meeting/20140625.md
@@ -9,10 +9,9 @@ tags: [meeting]
 
  1.  Eelke: old Matlab compatibility [2519](http://bugzilla.fieldtriptoolbox.org/show_bug.cgi?id=2519)
  2.  Large values with freqanalysis wavelet (two posts on mailing list)
- 3.  Jörn: final wishlist for moviefunction (bug [#1036](http://bugzilla.fieldtriptoolbox.org/show_bug.cgi?id=1036), [#683](http://bugzilla.fieldtriptoolbox.org/show_bug.cgi?id=683) and [#1859](http://bugzilla.fieldtriptoolbox.org/show_bug.cgi?id=1859)) - what functionality needs to be in? what functionality would be neat?
+ 3.  Jörn: final wishlist for moviefunction (bug [1036](http://bugzilla.fieldtriptoolbox.org/show_bug.cgi?id=1036), [683](http://bugzilla.fieldtriptoolbox.org/show_bug.cgi?id=683) and [1859](http://bugzilla.fieldtriptoolbox.org/show_bug.cgi?id=1859)) - what functionality needs to be in? what functionality would be neat?
  4.  JM: 2597
 
 #### Minutes
 
  1.  General point: FT will be 10 this year! Celebrate this with T-shirts (perhaps for Biomag), a barbecue (for the team or centre-wide, or both).
-
