--- a/workshop/oslo2019.md
+++ b/workshop/oslo2019.md
@@ -7,9 +7,9 @@ tags: [oslo2019, eeg-language]
 
 ## Where
 
-RITMO Centre for Interdisciplinary Studies in Rhythm, Time and Motion
-Forskningsveien 3A
-0373 Oslo
+RITMO Centre for Interdisciplinary Studies in Rhythm, Time and Motion  
+Forskningsveien 3A  
+0373 Oslo  
 Norway
 
 ## When
@@ -18,7 +18,7 @@ Wednesday June 12th - Friday June 14th 2019
 
 ## Who
 
-The RITMO Centre is the local organizer. Sabine Leske and Alejandro Omar Blenkmann are in charge of the local organization. Lau Møller Andersen (Karolinska Institute, Stockholm) and a to-be-announced person are the lecturers.
+The [RITMO Centre](https://www.hf.uio.no/ritmo/english/) is the local organizer. Sabine Leske and Alejandro Omar Blenkmann are in charge of the local organization. Lau Møller Andersen (NatMEG, Karolinska Institute, Stockholm) and a to-be-announced person are the lecturers.
 
 ## Tentative Programme
 
