--- a/workshop/oslo2019.md
+++ b/workshop/oslo2019.md
@@ -18,7 +18,7 @@ Wednesday June 12th - Friday June 14th 2019
 
 ## Who
 
-The RITMO Centre is the local organizer. Sabine Leske and Alejandro Omar Blenkmann are in charge of the local organization. Lau Møller Andersen (Karolinska Institute, Stockholm) and a to-be-announced person are the lecturers.
+The RITMO Centre is the local organizer. Sabine Leske and Alejandro Omar Blenkmann are in charge of the local organization. Lau Møller Andersen (Karolinska Institute, Stockholm) and Britta Westner (CFIN, Aarhus University) are the lecturers.
 
 ## Tentative Programme
 
