--- a/workshop/oslo2019.md
+++ b/workshop/oslo2019.md
@@ -18,7 +18,7 @@ Wednesday June 12th - Friday June 14th 2019
 
 ## Who
 
-The RITMO Centre is the local organizer. Sabine Leske and Alejandro Omar Blenkmann are in charge of the local organization. 
+The RITMO Centre is the local organizer. Sabine Leske and Alejandro Omar Blenkmann are in charge of the local organization.
 Lau Møller Andersen (Karolinska Institute, Stockholm) and Britta Westner (CFIN, Aarhus University) are the lecturers.
 
 ## Tentative Programme
@@ -60,8 +60,8 @@ Lau Møller Andersen (Karolinska Institute, Stockholm) and Britta Westner (CFIN,
 - 12.15-13.15 Lunch
 - 13.15-14.15 Machine learning applied to EEG data (Lecture)
 - 14.15-14.30 Coffee break
-- 14.30-16.00 Machine learning applied to EEG data (Lecture)
-- 16.00-17.30 Playground ?
+- 14.30-16.00 Playground
+- 16.00-17.30 Playground ??
 - 18.00-23.59 Party
 
 
