added information about who can participate

--- a/workshop/oslo2019.md
+++ b/workshop/oslo2019.md
@@ -21,6 +21,9 @@ Wednesday June 12th - Friday June 14th 2019
 The RITMO Centre is the local organizer. Sabine Leske and Alejandro Omar Blenkmann are in charge of the local organization.
 Lau Møller Andersen (Karolinska Institute, Stockholm) and Britta Westner (CFIN, Aarhus University) are the lecturers.
 
+There will be room for ~30 participants. RITMO centre employees and students have priority.  
+When the local organizers have assessed how many RITMO affiliates are attending, registration will open to everyone.
+
 ## Tentative Programme
 
 ### Wednesday, June 12th
