update participant information

--- a/workshop/oslo2019.md
+++ b/workshop/oslo2019.md
@@ -19,7 +19,9 @@ Wednesday June 12th - Friday June 14th 2019
 ## Who
 
 The RITMO Centre is the local organizer. Sabine Leske and Alejandro Omar Blenkmann are in charge of the local organization.
-Lau Møller Andersen (Karolinska Institute, Stockholm) and Britta Westner (CFIN, Aarhus University) are the lecturers.
+Lau Møller Andersen (Karolinska Institute, Stockholm) and Britta Westner (CFIN, Aarhus University) are the lecturers.  
+RITMO Centre affiliates have priority. There is room for ~30 participants. When the local organizers have assessed how many RITMO affiliates are attending,  
+the workshop will be open to external participants if room is left.
 
 ## Tentative Programme
 
