--- a/workshop/oslo2019.md
+++ b/workshop/oslo2019.md
@@ -20,8 +20,7 @@ Wednesday June 12th - Friday June 14th 2019
 
 The RITMO Centre is the local organizer. Sabine Leske and Alejandro Omar Blenkmann are in charge of the local organization.
 Lau Møller Andersen (Karolinska Institute, Stockholm) and Britta Westner (CFIN, Aarhus University) are the lecturers.  
-RITMO Centre affiliates have priority. There is room for ~30 participants. When the local organizers have assessed how many RITMO affiliates are attending,  
-the workshop will be open to external participants if room is left.
+RITMO Centre affiliates have priority. There is room for ~30 participants. When the local organizers have assessed how many RITMO affiliates are attending, the workshop will be open to external participants if room is left.
 
 There will be room for ~30 participants. RITMO centre employees and students have priority.  
 When the local organizers have assessed how many RITMO affiliates are attending, registration will open to everyone.
