fixed formatting for strikethough text

--- a/development/meeting/20150413.md
+++ b/development/meeting/20150413.md
@@ -9,7 +9,7 @@ tags: [meeting]
 
 - toolkit 2015 trial run - we will test on \_\_\_
 
-- `<del>`ft_getdimord (Nietz)`</del>`
+- ~~ft_getdimord (Nietz)~~
 
 - stockholm oscillations ppt? (Nietz)
 
