--- a/getting_started/1020.md
+++ b/getting_started/1020.md
@@ -7,7 +7,7 @@ tags: [eeg, dataformat, layout]
 
 ### Introduction
 
-At the first International EEG congress, held in London in 1947, it was recognised that a standard method of placement of electrodes used in electroencephalography (EEG) was needed. Possible methods to standardise electrode placement were studied by H.H. Jasper, which resulted in the definition of the 10-20 electrode system (Jasper 1958). Since then, the 10-20 electrode system has become the de-facto standard for both clinical EEG and for the study of event related potentials (ERPs) in non-clinical settings. However, the advancement of multi-channel EEG hardware systems and of topographic methods to study evoked and event-related potentials, necessitated the standardisation of a larger number of channels. Therefore an extension to the original 10-20 system was proposed which increases the number of electrodes from 21 up to 74 (Chatrian et al. 1985). This extended 10-20 system of electrode placement, also known as the “10% system” or the “10-10 system” has been accepted and is currently endorsed as the standard of the American Electroencephalographic Society (AES 1994, Klem et al. 1999) and the International Federation of Societies for Electroencephalography and Clinical Neurophysioly (Nuwer 1998).
+At the first International EEG congress, held in London in 1947, it was recognised that a standard method of placement of electrodes used in electroencephalography (EEG) was needed. Possible methods to standardize electrode placement were studied by H.H. Jasper, which resulted in the definition of the 10-20 electrode system (Jasper 1958). Since then, the 10-20 electrode system has become the de-facto standard for both clinical EEG and for the study of event related potentials (ERPs) in non-clinical settings. However, the advancement of multi-channel EEG hardware systems and of topographic methods to study evoked and event-related potentials, necessitated the standardisation of a larger number of channels. Therefore an extension to the original 10-20 system was proposed which increases the number of electrodes from 21 up to 74 (Chatrian et al. 1985). This extended 10-20 system of electrode placement, also known as the “10% system” or the “10-10 system” has been accepted and is currently endorsed as the standard of the American Electroencephalographic Society (AES 1994, Klem et al. 1999) and the International Federation of Societies for Electroencephalography and Clinical Neurophysioly (Nuwer 1998).
 For references and more information see [Oostenveld & Praamstra, 2001](http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.116.7379&rep=rep1&type=pdf).
 
 ### Plotting
