formatting improvements to realtime and natmeg

--- a/development/realtime/bci2000.md
+++ b/development/realtime/bci2000.md
@@ -9,44 +9,28 @@ tags: [realtime]
 
 [BCI2000](http://www.bci2000.org) is a general-purpose system for brain-computer interface (BCI) research. It can also be used for data acquisition, stimulus presentation, and brain monitoring applications.
 
-It has support in the core version for the following hardwar
+It has support in the core version for the following hardware:
 
 - g.USBamp
-
 - g.MOBIlab
-
 - g.MOBIlab+ Bluetooth (g.tec)
 
 Furthermore, users have contributed support for the following hardware:
 
 - A/D Converter Boards
-
 - Data Translations, Inc.
-
 - National Instruments, Inc.
-
 - Measurement Computing, Inc.
-
 - Modular-EEG Systems
-
 - Amplifiers/Digitizers
-
 - Tucker-Davis Pentusa
-
 - Biosemi
-
 - BioRadio 150 (Cleveland Medical Devices, Inc.)
-
 - Refa System (TMSi, Inc.)
-
 - EEG Systems
-
 - Neuroscan, Inc.
-
 - Brain Vision, V-Amp (Brain Products)
-
 - Micromed EEG Systems
-
 - Electrical Geodesics Amp Server
 
 ## Interface with MATLAB and FieldTrip
@@ -70,9 +54,6 @@ such systems, please see these pages on [devices supported in core BCI2000](http
 
 ## FieldTrip buffer source module
 
-We have developed [FieldTripBufferSource](http://www.bci2000.org/wiki/index.php/Contributions:FieldTripBufferSource), a BCI2000 signal source module that **reads** data and events from a FieldTrip buffer, and thus behaves like an acquistion system from BCI2000's point of view. The user needs to configure the hostname and port where the buffer resides, the blocksize, the number of channels, and optionally a list of states that will be modified according to the value of equally named events from the FieldTrip buffer.
+We have developed [FieldTripBufferSource](http://www.bci2000.org/wiki/index.php/Contributions:FieldTripBufferSource), a BCI2000 signal source module that **reads** data and events from a FieldTrip buffer, and thus behaves like an acquisition system from BCI2000's point of view. The user needs to configure the hostname and port where the buffer resides, the blocksize, the number of channels, and optionally a list of states that will be modified according to the value of equally named events from the FieldTrip buffer.
 
-Note: Similarly to the aforementioned FieldTripBuffer filter, the [FieldTripBufferSource](http://www.bci2000.org/wiki/index.php/Contributions:FieldTripBufferSource) module does not define any state variables on its own.
-This means that it's not possible to translate general buffer events to BCI2000 states, but only events whose type string matches the name of
-an exisiting state variable in BCI2000 (e.g., 'Recording'). As a possible future extension, it would be nice to flexibly adapt the source module
-to the type of events that are being written to the buffer for a particular application.
+Note: Similarly to the aforementioned FieldTripBuffer filter, the [FieldTripBufferSource](http://www.bci2000.org/wiki/index.php/Contributions:FieldTripBufferSource) module does not define any state variables on its own. This means that it's not possible to translate general buffer events to BCI2000 states, but only events whose type string matches the name of an existing state variable in BCI2000 (e.g., 'Recording'). As a possible future extension, it would be nice to flexibly adapt the source module to the type of events that are being written to the buffer for a particular application.
