--- a/workshop/oslo2019.md
+++ b/workshop/oslo2019.md
@@ -1,6 +1,6 @@
 ---
 title: FieldTrip workshop in Oslo
-tags: [oslo2019, eeg-language]
+tags: [oslo2019, eeg]
 ---
 
 # FieldTrip workshop in Oslo
@@ -44,23 +44,24 @@ When the local organizers have assessed how many RITMO affiliates are attending,
 
 ### Thursday, June 13th
 
-- 08.00-09.15 Source reconstruction using beamformers (Lecture)
+- 08.00-09.15 Cluster-based statistical testing (Lecture)
 - 09.15-09.30 Coffee Break
-- 09.30-11.00 Localizing oscillatory sources (Hands-on)
-- 11.15-12.15 Cluster-based statistical testing (Lecture)
+- 09.30-11.00 Cluster-based statistical testing (Hands-on)
+- 11.15-12.15 Source reconstruction using beamformers (Lecture)
 - 12.15-13.15 Lunch
-- 13.15-15.15 Cluster-based statistical testing (Hands-on)
+- 13.15-15.15 Localizing oscillatory sources (Hands-on)
 - 15.15-15.30 Coffee break
 - 15.30-16.00 Wrap-up of the day and questions
 - 16.00-17.30 Playground ??
 
+
 ### Friday, June 14th
 
-- 08.00-09.15 Group Analysis and statistical testing re-visited (Lecture)
+- 08.00-09.15 Forward modelling (Lecture)
 - 09.00-09.15 Coffee break
-- 09.15-11.00 Group analysis and statistical testing re-visited (Hands-on)
+- 09.15-11.00 Forward modelling (Hands-on)
 - 11.00-11.15 Coffee break
-- 11.15-12.15 Wrap-up of Group Analysis
+- 11.15-12.15 Wrap-up of everything so far
 - 12.15-13.15 Lunch
 - 13.15-14.15 Machine learning applied to EEG data (Lecture)
 - 14.15-14.30 Coffee break
@@ -70,7 +71,7 @@ When the local organizers have assessed how many RITMO affiliates are attending,
 
 ## The data used for the hands-on sessions
 
-During the hands-on sessions we will use a task EEG dataset recorded in a [language experiment](/tutorial/eeg_language).
+During the hands-on sessions we will use a task EEG dataset recorded in a auditory [oddball experiment] (http://www.fieldtriptoolbox.org/workshop/natmeg/preprocessing/#the-oddball-paradigm).
 
 The data will be provided on a USB stick during the hands-on sessions. You can also download the data from our [FTP server](ftp://ftp.fieldtriptoolbox.org/pub/fieldtrip/workshop/oslo2019/).
 
