some cleanups and links added to the oslo2019 workshop page

--- a/workshop/oslo2019.md
+++ b/workshop/oslo2019.md
@@ -1,6 +1,6 @@
 ---
 title: FieldTrip workshop in Oslo
-tags: [oslo2019, meg-audodd]
+tags: [oslo2019, eeg-audodd]
 ---
 
 # FieldTrip workshop in Oslo
@@ -19,11 +19,10 @@ Wednesday June 12th - Friday June 14th 2019
 ## Who
 
 The RITMO Centre is the local organizer. Sabine Leske and Alejandro Omar Blenkmann are in charge of the local organization.
-Lau Møller Andersen (Karolinska Institute, Stockholm) and Britta Westner (CFIN, Aarhus University) are the lecturers.  
-RITMO Centre affiliates have priority. There is room for ~30 participants. When the local organizers have assessed how many RITMO affiliates are attending, the workshop will be open to external participants if room is left.
 
-There will be room for ~30 participants. RITMO centre employees and students have priority.  
-When the local organizers have assessed how many RITMO affiliates are attending, registration will open to everyone.
+Lau Møller Andersen (Karolinska Institute, Stockholm) and Britta Westner (CFIN, Aarhus University) are the lecturers.  
+
+RITMO Centre affiliates have priority. There will be room for ~30 participants. RITMO centre employees and students have priority. When the local organizers have assessed how many RITMO affiliates are attending, the workshop will be open to external participants if there are still places left.
 
 ## Tentative Programme
 
@@ -32,12 +31,12 @@ When the local organizers have assessed how many RITMO affiliates are attending,
 - 07.30-08.00 Registration, handouts and coffee
 - 08.00-09.00 Introduction to MATLAB and the FieldTrip toolbox (Lecture)
 - 09.00-09.15 Coffee break
-- 09.15-10.45 Getting started with EEG data, quality checks, cleaning of data and Event-Related Potentials (Hands-on)
+- 09.15-10.45 [Getting started with EEG data, quality checks, cleaning of data and Event-Related Potentials](/workshop/oslo2019/introduction) (Hands-on)
 - 10.45-11.00 Coffee break
 - 11.00-12.00 Frequency and Time-Frequency analysis (Lecture)
 - 12.00-13.15 Lunch
 - 13.15.13.45 Questions and Answers so far
-- 13.45-15.15 Time-Frequency analysis of EEG data (Hands-on)
+- 13.45-15.15 [Time-Frequency analysis of EEG data](/workshop/oslo2019/timefrequency) (Hands-on)
 - 15.15-15.30 Coffee break
 - 15.30-16.00 Wrap-up of the day and questions
 - 16.00-17.30 Playground ??
@@ -46,7 +45,7 @@ When the local organizers have assessed how many RITMO affiliates are attending,
 
 - 08.00-09.15 Cluster-based statistical testing (Lecture)
 - 09.15-09.30 Coffee Break
-- 09.30-11.00 Cluster-based statistical testing (Hands-on)
+- 09.30-11.00 [Cluster-based statistical ](/workshop/oslo2019/statistics) (Hands-on)
 - 11.15-12.15 Source reconstruction using beamformers (Lecture)
 - 12.15-13.15 Lunch
 - 13.15-15.15 Localizing oscillatory sources (Hands-on)
@@ -57,9 +56,9 @@ When the local organizers have assessed how many RITMO affiliates are attending,
 
 ### Friday, June 14th
 
-- 08.00-09.15 Forward modelling (Lecture)
+- 08.00-09.15 Forward modeling (Lecture)
 - 09.00-09.15 Coffee break
-- 09.15-11.00 Forward modelling (Hands-on)
+- 09.15-11.00 [Forward modeling](/workshop/oslo2019/forward_modeling) (Hands-on)
 - 11.00-11.15 Coffee break
 - 11.15-12.15 Wrap-up of everything so far
 - 12.15-13.15 Lunch
@@ -71,7 +70,7 @@ When the local organizers have assessed how many RITMO affiliates are attending,
 
 ## The data used for the hands-on sessions
 
-During the hands-on sessions we will use a task EEG dataset recorded in a auditory [oddball experiment] (http://www.fieldtriptoolbox.org/workshop/natmeg/preprocessing/#the-oddball-paradigm).
+During the hands-on sessions we will use a task EEG dataset recorded in a auditory [oddball experiment](http://www.fieldtriptoolbox.org/workshop/natmeg/preprocessing/#the-oddball-paradigm).
 
 The data will be provided on a USB stick during the hands-on sessions. You can also download the data from our [FTP server](ftp://ftp.fieldtriptoolbox.org/pub/fieldtrip/workshop/oslo2019/).
 
