small instruction change

--- a/workshop/oslo2019.md
+++ b/workshop/oslo2019.md
@@ -79,7 +79,7 @@ You can download the data from our [FTP server](ftp://ftp.fieldtriptoolbox.org/p
 For the hands-on sessions you have to start MATLAB. To ensure that everything
 runs smooth, we will work with a clean version of FieldTrip from the ftp
 
-1.  Download all the (non-zip) files to the same path
+1.  Download all the (non-zip) files to the same path - that means that you need to put the mat-files from different sub-folders (in the ftp) into the same folder on your own computer
 2.  Unzip the fieldtrip.zip file to the folder where you keep your MATLAB packages
 3.  Unzip the dicom files into a folder called dicom which is on the path where you keep the other data files (step 1) 
 
