--- a/workshop/oslo2019.md
+++ b/workshop/oslo2019.md
@@ -5,6 +5,8 @@ tags: [oslo2019, eeg-audodd]
 
 # FieldTrip workshop in Oslo
 
+{% include image src="https://www.uio.no/ritmo/bilder/forsidefoto-ritmo-970x400px.jpg" width="650" %}
+
 ## Where
 
 RITMO Centre for Interdisciplinary Studies in Rhythm, Time and Motion  
@@ -22,9 +24,9 @@ The RITMO Centre is the local organizer. Sabine Leske and Alejandro Omar Blenkma
 
 Lau Møller Andersen (Karolinska Institute, Stockholm) and Britta Westner (CFIN, Aarhus University) are the lecturers.  
 
-RITMO Centre affiliates have priority. There will be room for ~30 participants. RITMO centre employees and students have priority. When the local organizers have assessed how many RITMO affiliates are attending, the workshop will be open to external participants if there are still places left.
+There will be room for ~30 participants. RITMO centre employees and students have priority. When the local organizers have assessed how many RITMO affiliates are attending, the workshop will be open to external participants if there are still places left.
 
-## Tentative Programme
+## Tentative Program
 
 ### Wednesday, June 12th
 
@@ -79,13 +81,12 @@ You can download the data from our [FTP server](ftp://ftp.fieldtriptoolbox.org/p
 For the hands-on sessions you have to start MATLAB. To ensure that everything
 runs smooth, we will work with a clean version of FieldTrip from the ftp
 
-1.  Download all the (non-zip) files to the same path - that means that you need to put the mat-files from different sub-folders (in the ftp) into the same folder on your own computer
-2.  Unzip the fieldtrip.zip file to the folder where you keep your MATLAB packages
-3.  Unzip the dicom files into a folder called dicom which is on the path where you keep the other data files (step 1) 
+1.  Download all the files from the FTP server, please keep the same directory structure (i.e. split over hands-on sessions)
+2.  Unzip `fieldtrip.zip` file to the folder where you usually keep your MATLAB packages
+3.  Unzip `dicom.zip` into a folder called dicom, which should be in the same directory where you keep the other data files (from step 1)
 
 {% include markup/danger %}
 Please do NOT use the graphical path management tool from MATLAB. In this hands-on session we'll manage the path from the command line, but in general you are much better off using a startup.m file than the path GUI.
 
 Please do NOT add FieldTrip with all subdirectories, subdirectories will be added automatically when needed, but only when needed.
 {% include markup/end %}
-
