updated room where workshop will be held

--- a/workshop/oslo2019.md
+++ b/workshop/oslo2019.md
@@ -14,6 +14,12 @@ Forskningsveien 3A
 0373 Oslo  
 Norway
 
+**Place of workshop**
+
+Room 3417 Terminalstue Assembler.
+Ole-Johan Dahls hus
+Address: Gaustadalléen 23B.
+
 ## When
 
 Wednesday June 12th - Friday June 14th 2019
