added newlines for 'place of workshop'

--- a/workshop/oslo2019.md
+++ b/workshop/oslo2019.md
@@ -16,9 +16,9 @@ Norway
 
 **Place of workshop**
 
-Room 3417 Terminalstue Assembler.
-Ole-Johan Dahls hus
-Address: Gaustadalléen 23B.
+Room 3417 Terminalstue Assembler  
+Ole-Johan Dahls hus  
+Address: Gaustadalléen 23B.  
 
 ## When
 
