improved internal links

--- a/workshop/oslo2019.md
+++ b/workshop/oslo2019.md
@@ -78,7 +78,7 @@ There will be room for ~30 participants. RITMO centre employees and students hav
 
 ## The data used for the hands-on sessions
 
-During the hands-on sessions we will use a task EEG dataset recorded in a auditory [oddball experiment](http://www.fieldtriptoolbox.org/workshop/natmeg/preprocessing/#the-oddball-paradigm).
+During the hands-on sessions we will use a task EEG dataset recorded in a auditory [oddball experiment](/workshop/natmeg/meg_audodd).
 
 You can download the data from our [FTP server](ftp://ftp.fieldtriptoolbox.org/pub/fieldtrip/workshop/oslo2019/). The data can also be provided on a USB stick during the hands-on sessions.
 
