--- a/workshop/oslo2019.md
+++ b/workshop/oslo2019.md
@@ -56,7 +56,7 @@ There will be room for ~30 participants. RITMO centre employees and students hav
 - 09.30-11.00 [Cluster-based statistical ](/workshop/oslo2019/statistics) (Hands-on)
 - 11.15-12.15 Source reconstruction using beamformers (Lecture)
 - 12.15-13.15 Lunch
-- 13.15-15.15 Localizing oscillatory sources (Hands-on)
+- 13.15-15.15 [Localizing oscillatory sources](/workshop/oslo2019/beamforming) (Hands-on)
 - 15.15-15.30 Coffee break
 - 15.30-16.00 Wrap-up of the day and questions
 - 16.00-17.30 Playground ??
