--- a/workshop/oslo2019.md
+++ b/workshop/oslo2019.md
@@ -37,11 +37,11 @@ There will be room for ~30 participants. RITMO centre employees and students hav
 ### Wednesday, June 12th
 
 - 07.30-08.00 Registration, handouts and coffee
-- 08.00-09.00 Introduction to MATLAB and the FieldTrip toolbox (Lecture)
+- 08.00-09.00 [Introduction to MATLAB and the FieldTrip toolbox](/assets/pdf/workshop/oslo2019/1-intro.pdf) (Lecture)
 - 09.00-09.15 Coffee break
 - 09.15-10.45 [Getting started with EEG data, quality checks, cleaning of data and Event-Related Potentials](/workshop/oslo2019/introduction) (Hands-on)
 - 10.45-11.00 Coffee break
-- 11.00-12.00 Frequency and Time-Frequency analysis (Lecture)
+- 11.00-12.00 [Frequency and Time-Frequency analysis](/assets/pdf/workshop/oslo2019/2-frequency.pdf) (Lecture)
 - 12.00-13.15 Lunch
 - 13.15.13.45 Questions and Answers so far
 - 13.45-15.15 [Time-Frequency analysis of EEG data](/workshop/oslo2019/timefrequency) (Hands-on)
@@ -51,10 +51,10 @@ There will be room for ~30 participants. RITMO centre employees and students hav
 
 ### Thursday, June 13th
 
-- 08.00-09.15 Cluster-based statistical testing (Lecture)
+- 08.00-09.15 [Cluster-based statistical testing](/assets/pdf/workshop/oslo2019/3-statistics.pdf) (Lecture)
 - 09.15-09.30 Coffee Break
-- 09.30-11.00 [Cluster-based statistical ](/workshop/oslo2019/statistics) (Hands-on)
-- 11.15-12.15 Source reconstruction using beamformers (Lecture)
+- 09.30-11.00 [Cluster-based statistical](/workshop/oslo2019/statistics) (Hands-on)
+- 11.15-12.15 [Source reconstruction using beamformers](/assets/pdf/workshop/oslo2019/4-beamformer.pdf) (Lecture)
 - 12.15-13.15 Lunch
 - 13.15-15.15 [Localizing oscillatory sources](/workshop/oslo2019/beamforming) (Hands-on)
 - 15.15-15.30 Coffee break
@@ -64,7 +64,7 @@ There will be room for ~30 participants. RITMO centre employees and students hav
 
 ### Friday, June 14th
 
-- 08.00-09.15 Forward modeling (Lecture)
+- 08.00-09.15 [Forward modeling](/assets/pdf/workshop/oslo2019/5-forward.pdf) (Lecture)
 - 09.00-09.15 Coffee break
 - 09.15-11.00 [Forward modeling](/workshop/oslo2019/forward_modeling) (Hands-on)
 - 11.00-11.15 Coffee break
