--- a/workshop/oslo2019.md
+++ b/workshop/oslo2019.md
@@ -32,6 +32,10 @@ Lau Møller Andersen (Karolinska Institute, Stockholm) and Britta Westner (CFIN,
 
 There will be room for ~30 participants. RITMO centre employees and students have priority. When the local organizers have assessed how many RITMO affiliates are attending, the workshop will be open to external participants if there are still places left.
 
+## Links to lectures
+
+N.B.! Note that links to lectures are not up yet, but will before the summer break is over.
+
 ## Tentative Program
 
 ### Wednesday, June 12th
