ENH - improve formatting to http links

--- a/development/meeting/20140514.md
+++ b/development/meeting/20140514.md
@@ -30,11 +30,11 @@ tags: [meeting]
 
 - regarding filters: Eelke will send the ppt of Roemer, suggest a faq and example page and try to get a patch for the code
 
-- regarding keepindividual/grandavg, see http://bugzilla/show_bug.cgi?id=1617
+- regarding keepindividual/grandavg, see <http://bugzilla/show_bug.cgi?id=1617>
 
 - bug 2562: check solutions for ft_datatype_raw and fixtimeaxes functions
 
-- source.avg.xxx trouble: see http://bugzilla/show_bug.cgi?id=2579
+- source.avg.xxx trouble: see <http://bugzilla/show_bug.cgi?id=2579>
 
 - regarding faq: everyone agrees, robert will start one. Suggestion by Jim: also specify in the tutorials which sections are data-type specific (e.g. using color coding)
 
