--- a/development/meeting/20140521.md
+++ b/development/meeting/20140521.md
@@ -9,7 +9,7 @@ tags: [meeting]
 
 - Eric will join to discuss "helping out and rewards"
 
-- Discuss http://bugzilla.fieldtriptoolbox.org/show_bug.cgi?id=2452 and fallback files (Jörn) regarding support Matlab 2013>
+- Discuss <http://bugzilla.fieldtriptoolbox.org/show_bug.cgi?id=2452> and fallback files (Jörn) regarding support Matlab 2013>
 
 - Haiteng: Bug [2523](http://bugzilla.fieldtriptoolbox.org/show_bug.cgi?id=2523) first implementation of ft_crossfrequencyanalysis ; Bug [2411](http://bugzilla.fieldtriptoolbox.org/show_bug.cgi?id=2411) - implement matching pursuit decomposition
 
