--- a/development/meeting/20150209.md
+++ b/development/meeting/20150209.md
@@ -9,7 +9,7 @@ tags: [meeting]
 
 - assign teaching + tutoring for spring toolkit
 
-- planning for bug binge, see http://bugzilla.fieldtriptoolbox.org/show_bug.cgi?id=2028#c6
+- planning for bug binge, see <http://bugzilla.fieldtriptoolbox.org/show_bug.cgi?id=2028#c6>
 
 ### Minutes
 
@@ -17,4 +17,4 @@ tags: [meeting]
 
 - Nietzsche asked about padding. Robert fixed the FIXME's and Nietzsche will make a tag or link.
 
-- Luca will deal with http://bugzilla.fieldtriptoolbox.org/show_bug.cgi?id=2831
+- Luca will deal with <http://bugzilla.fieldtriptoolbox.org/show_bug.cgi?id=2831>
