--- a/development/meeting/20150216.md
+++ b/development/meeting/20150216.md
@@ -7,7 +7,7 @@ tags: [meeting]
 
 ### Agenda
 
-- spm8up, see http://bugzilla.fieldtriptoolbox.org/show_bug.cgi?id=2839 (Robert)
+- spm8up, see <http://bugzilla.fieldtriptoolbox.org/show_bug.cgi?id=2839> (Robert)
 
 - plotting/clusters;
 
